--- a/settings.conf
+++ b/settings.conf
@@ -134,21 +134,22 @@ sequence:
   - locale
   - keyboard
   - localecfg
-#  - luksbootkeyfile
+  - luksbootkeyfile
 #  - luksopenswaphookcfg
-#  - dracutlukscfg
+  - dracutlukscfg
 #  - plymouthcfg
-  - initcpiocfg
-  - initcpio
+#  - initcpiocfg
+#  - initcpio
   - users
   - displaymanager
   - networkcfg
   - hwclock
   - services-systemd
-#  - dracut
-  - initramfs
+  - dracut
+#  - initramfs
 #  - grubcfg
   - bootloader
+  - packages
   - umount
 - show:
 #  - webview@owncloud
